test-suite/tests/roundtrip/invalid/syntax/unexpected_token/02/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/unexpected_token/02/input.essence:1:17:
  |
1 | find x: int(1..3x)
  |                 ^
Error: Symbol not found "x"

tests/roundtrip/invalid/syntax/unexpected_token/02/input.essence:1:17:
  |
1 | find x: int(1..3x)
  |                 ^
Missing ,

